--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -6,7 +6,7 @@
    background-size: cover;
    display: flex;
    align-items: center;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .main {
