--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,4 @@
+@import url('../vendor/fonts.css');
 @import url('../blocks/page.css');
 @import url('../blocks/aside.css');
 @import url('../blocks/screen-area.css');
