--- a/src/blocks/screen-area.css
+++ b/src/blocks/screen-area.css
@@ -1,17 +1,97 @@
 .screen-area {
-   background-color: black;
    width: 100%;
    grid-area: section;
-   background-color: #fff;
+   /* background-color: #fff; */
    border-radius: 40px;
    padding: 50px 30px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 40px;
+   overflow: hidden;
 }
 
 .header__title {
    margin: 0;
-   font-size: 32px;
+   font-size: 26px;
+   color: #262626;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 800;
+   line-height: 1.2;
+}
+
+.wrapper {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   /* overflow-y: scroll; */
+}
+
+.input {
+   height: 40px;
+   border: 2px dashed #000;
+   border-radius: 8px;
+   padding: 5px 12px;
+   background-color: transparent;
+   color: #262626;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 500;
+}
+
+.input::placeholder {
+   font-size: 16px;
+   color: rgba(0, 0, 0, .6);
+}
+
+.btn {
+   padding: 20px;
+   background-color: #262626;
+   color: #fff;
+   font-size: 18px;
+   border: none;
+   border-radius: 8px;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 800;
+   cursor: pointer;
+}
+
+.list-todo {
+   list-style: none;
+   margin: 20px 0;
+   padding: 0;
+}
+
+.list-todo__item {
+   margin-bottom: 10px;
+   padding: 20px;
+   background-color: #fff;
+   font-size: 18px;
+   line-height: 1.3;
+   border-radius: 8px;
+   color: #262626;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 800;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.list-todo__item-title {
+   max-width: 600px;
+   margin: 0;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   overflow-wrap: break-word;
+}
+
+.list-todo__btn-deleted {
+display: block;
+   background: url('../images/deleted_black.png') no-repeat;
+   background-size: cover;
+   width: 22px;
+   height: 22px;
+   background-color: transparent;
+   border: none;
+   padding: 0;
+   cursor: pointer;
 }
