--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,3 +2,4 @@
 @import url('../blocks/page.css');
 @import url('../blocks/aside.css');
 @import url('../blocks/screen-area.css');
+@import url('../blocks/popup-edit.css');
