--- a/src/blocks/aside.css
+++ b/src/blocks/aside.css
@@ -9,7 +9,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
-}
+ }
 
 .aside__title {
    margin: 0;
@@ -19,30 +19,94 @@
    font-weight: 800;
 }
 
+.aside__nav {
+   width: 80%;
+   box-sizing: border-box;
+}
+
 .aside__list {
    list-style: none;
-   margin: 0;
+   margin: 0 0 140px;
    padding: 0;
+   width: 100%;
+   box-sizing: border-box;
 }
 
 .aside__item {
    margin-bottom: 16px;
-   padding-left: 16px;
-   width: 100%;
-   position: relative;
+   padding: 10px 16px;
+   box-sizing: content-box;
    color: #262626;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 500;
+   font-size: 16px;
+   line-height: 1.3;
+   display: flex;
+   align-items: center;
+   justify-content: flex-start;
+   gap: 18px;
 }
 
-.aside__item::before {
+.aside__item:hover {
+   background-color: #262626;
+   color: #fff;
+   border-radius: 32px;
+}
+
+.aside__item-img {
+   display: inline-block;
+   width: 18px;
+   height: 18px;
+}
+
+/* .dashboard::before {
    content: '';
-   background-image: url('../images/free-icon-font-pixabay.png');
+   background-image: url('../images/dashboard_b.png');
    display: block;
-   width: 20px;
-   height: 20px;
+   width: 16px;
+   height: 16px;
    background-size: contain;
    position: absolute;
-   left: -20px;
-   top: 0;
+   left: -14px;
+   top: auto;
+} 
+
+.calendar {
+   content: '';
+   background-image: url('../images/calendar_b.png');
+   display: block;
+   width: 16px;
+   height: 16px;
+   background-size: contain;
+   position: absolute;
+   left: -14px;
+   top: auto;
+}
+
+.statistic::before {
+   content: '';
+   background-image: url('../images/statistic_b.png');
+   display: block;
+   width: 16px;
+   height: 16px;
+   background-size: contain;
+   position: absolute;
+   left: -14px;
+   top: auto;
+}
+
+.todo-list::before {
+   content: '';
+   background-image: url('../images/list_black.png');
+   display: block;
+   width: 16px;
+   height: 16px;
+   background-size: contain;
+   position: absolute;
+   left: -14px;
+   top: auto;
+}
+*/
+.settings {
+   padding-left: 8px;
 }
