--- a/src/blocks/screen-area.css
+++ b/src/blocks/screen-area.css
@@ -1,7 +1,6 @@
 .screen-area {
    width: 100%;
    grid-area: section;
-   /* background-color: #fff; */
    border-radius: 40px;
    padding: 50px 30px;
    box-sizing: border-box;
@@ -31,15 +30,16 @@
    height: 40px;
    border: 2px dashed #000;
    border-radius: 8px;
-   padding: 5px 12px;
+   padding: 8px 30px;
    background-color: transparent;
    color: #262626;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 500;
+   font-size: 18px;
 }
 
 .input::placeholder {
-   font-size: 16px;
+   font-size: 18px;
    color: rgba(0, 0, 0, .6);
 }
 
@@ -55,32 +55,37 @@
    cursor: pointer;
 }
 
+.btn:hover {
+   opacity: 0.8;
+}
+
 .btn_disable {
    background-color: #9c9c9c;
 }
 
 .list-todo {
    list-style: none;
-   margin: 20px 0;
+   margin: 30px 0;
    padding: 0;
 }
 
 .list-todo__item {
    margin-bottom: 10px;
-   padding: 20px;
+   padding: 20px 30px;
    background-color: #fff;
-   font-size: 18px;
+   font-size: 20px;
    line-height: 1.3;
    border-radius: 8px;
    color: #262626;
    font-family: 'Open Sans', Arial, sans-serif;
-   font-weight: 800;
+   font-weight: 500;
    display: flex;
    justify-content: space-between;
    align-items: center;
 }
 
 .list-todo__item-title {
+   color: #262626;
    max-width: 600px;
    margin: 0;
    overflow: hidden;
@@ -88,11 +93,16 @@
    overflow-wrap: break-word;
 }
 
+.list-todo__item-title_done {
+   text-decoration: line-through;
+   color: #9c9c9c;
+}
+
 .list-todo__container-btn {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   gap: 10px;
+   gap: 16px;
 }
 
 .list-todo__btn-done {
@@ -109,9 +119,9 @@
 
 .list-todo__btn-edit {
    margin-left: 4px;
-   width: 22px;
-   height: 22px;
-   background: url('../images/edit.png') no-repeat center;
+   width: 20px;
+   height: 20px;
+   background: url('../images/edit1.png') no-repeat center;
    background-size: 100%;
    background-color: transparent;
    border: none;
