--- a/src/blocks/aside.css
+++ b/src/blocks/aside.css
@@ -1,41 +1,69 @@
 .aside {
+   grid-area: aside;
+   min-width: 280px;
+   max-height: 99vh;
+   width: 100%;
+   /* position: fixed;
+   top: 0;
+   left: 0; */
+   background-color: #fff;
+   border-top-right-radius: 12px;
+   padding: 30px 12px 30px 20px;
+   box-sizing: border-box;
+   display: flex;
+   justify-content: flex-start;
+   align-items: center;
+}
+
+.aside-wrapper {
    width: 100%;
    height: 100%;
-   background-color: #fff;
-   border-radius: 40px;
-   padding: 30px 12px;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
+   gap: 50px;
+}
+
+.aside__title {
+   margin: 30px 0 20px;
+   font-size: 36px;
+   color: #262626;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 800;
+   line-height: 0.7;
+   text-align: end;
+}
+
+.aside__title-by {
+   font-family: 'Zeyada';
+   font-size: 18px;
+}
+
+.aside__nav {
+   /* width: 80%; */
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
- }
-
-.aside__title {
-   margin: 0;
-   font-size: 26px;
-   color: #262626;
-   font-family: 'Open Sans', Arial, sans-serif;
-   font-weight: 800;
-}
-
-.aside__nav {
-   width: 80%;
-   box-sizing: border-box;
+   gap: 80px;
+   /* height: 70%; */
 }
 
 .aside__list {
    list-style: none;
-   margin: 0 0 140px;
+   /* margin: 0 0 40px; */
    padding: 0;
    width: 100%;
    box-sizing: border-box;
 }
 
 .aside__item {
-   margin-bottom: 16px;
-   padding: 10px 16px;
-   box-sizing: content-box;
+   margin-bottom: 6px;
+   padding: 16px 16px 16px 32px;
+   min-width: 188px;
+   box-sizing: border-box;
    color: #262626;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 500;
@@ -45,9 +73,16 @@
    align-items: center;
    justify-content: flex-start;
    gap: 18px;
+   cursor: pointer;
 }
 
 .aside__item:hover {
+   background-color: #989EAD;
+   color: #fff;
+   border-radius: 32px;
+}
+
+.aside__item-type-active {
    background-color: #262626;
    color: #fff;
    border-radius: 32px;
@@ -59,54 +94,72 @@
    height: 18px;
 }
 
-/* .dashboard::before {
-   content: '';
-   background-image: url('../images/dashboard_b.png');
-   display: block;
-   width: 16px;
-   height: 16px;
+.icon-statistic {
+   background: url('../images/statistic_b.png') no-repeat center;
    background-size: contain;
-   position: absolute;
-   left: -14px;
-   top: auto;
-} 
-
-.calendar {
-   content: '';
-   background-image: url('../images/calendar_b.png');
-   display: block;
-   width: 16px;
-   height: 16px;
-   background-size: contain;
-   position: absolute;
-   left: -14px;
-   top: auto;
 }
 
-.statistic::before {
-   content: '';
-   background-image: url('../images/statistic_b.png');
-   display: block;
-   width: 16px;
-   height: 16px;
-   background-size: contain;
-   position: absolute;
-   left: -14px;
-   top: auto;
+.aside__item:hover .icon-statistic {
+   background-image: url('../images/statistic_w.png');
 }
 
-.todo-list::before {
-   content: '';
-   background-image: url('../images/list_black.png');
-   display: block;
-   width: 16px;
-   height: 16px;
-   background-size: contain;
-   position: absolute;
-   left: -14px;
-   top: auto;
+.icon-statistic-active {
+   background-image: url('../images/statistic_w.png');
 }
-*/
-.settings {
-   padding-left: 8px;
+
+.icon-dashboard {
+   background: url('../images/dashboard_b.svg') no-repeat center;
+   background-size: contain;
+}
+
+.aside__item:hover .icon-dashboard {
+   background-image: url('../images/dashboard_w.png');
+}
+
+.icon-dashboard-active {
+   background-image: url('../images/dashboard_w.png');
+}
+
+.icon-calendar {
+   background: url('../images/calendar_b.png') no-repeat center;
+   background-size: contain;
+}
+
+.aside__item:hover .icon-calendar {
+   background-image: url('../images/calendar_w.png');
+}
+
+.icon-calendar-active {
+   background-image: url('../images/calendar_w.png');
+}
+
+.icon-todo-list {
+   background: url('../images/list_black.png') no-repeat center;
+   background-size: contain;
+}
+
+.aside__item:hover .icon-todo-list {
+   background-image: url('../images/list_white.png');
+}
+
+.icon-todo-list-active {
+   background-image: url('../images/list_white.png');
+}
+
+/* .aside__settings {
+   width: 100%;
+} */
+
+.icon-settings {
+   /* padding-left: 8px; */
+   background: url('../images/settings_b.png') no-repeat center;
+   background-size: contain;
+}
+
+.aside__item:hover .icon-settings {
+   background-image: url('../images/settings_w.png');
+}
+
+.icon-settings-active {
+   background-image: url('../images/settings_w.png');
 }
