--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,39 +1,42 @@
 .page {
    margin: 0;
-   width: 100%;
+overflow: hidden;
+   width: 100vw;
    height: 100vh;
-   background: url('../images/background1.jpg') no-repeat;
-   background-size: cover;
-   display: flex;
-   align-items: center;
    font-family: 'Open Sans', Arial, sans-serif;
+   display: grid;
+   grid-template-columns: 26% 74%;
+   gap: 20px;
+   grid-template-areas:
+      "aside main";
 }
 
 .main {
-   width: 94%;
-   height: 92%;
+   background: url('../images/background1.jpg') no-repeat;
+   background-size: cover;
+   width: 100%;
+   height: 100%;
    border: 2px solid #fff;
-   border-radius: 58px;
+   border-radius: 8px;
    margin: 0 auto;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+   grid-area: main;
+   box-sizing: border-box;
 }
 
 .container {
    margin: 0;
-   padding: 28px;
-   width: 99%;
-   height: 98%;
-   background-color: rgba(234, 234, 234, 0.8);
-   border-radius: 46px;
-   /* filter: blur(2px); */
-   display: grid;
-   grid-template-columns: repeat(5, 1fr);
-   gap: 30px;
-   grid-template-areas:
-      "aside section section section section";
+   padding: 12px 28px;
+   height: 100vh;
+   -webkit-backdrop-filter: blur(5px);
+   backdrop-filter: blur(5px);
+   border-radius: 12px;
    justify-items: center;
    box-sizing: border-box;
-   position: relative;
+   width: 100%;
+}
+
+@media (max-width: 1050px) {
+   .page {
+      grid-template-columns: 28% 72%;
+   }
 }
