--- a/src/blocks/popup-edit.css
+++ b/src/blocks/popup-edit.css
@@ -1,6 +1,6 @@
 .popup-edit {
-   width: 100%;
-   height: 100%;
+   width: 100vw;
+   height: 100vh;
    background-color: rgba(26, 26, 26, 0.7);
    display: flex;
    justify-content: center;
