--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,3 +3,4 @@
 @import url('../blocks/aside.css');
 @import url('../blocks/screen-area.css');
 @import url('../blocks/popup-edit.css');
+@import url('../blocks/section-time.css');
