--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,3 +4,4 @@
 @import url('../blocks/screen-area.css');
 @import url('../blocks/popup-edit.css');
 @import url('../blocks/section-time.css');
+@import url('../blocks/section-weather.css');
