--- a/src/blocks/screen-area.css
+++ b/src/blocks/screen-area.css
@@ -2,7 +2,7 @@
    width: 100%;
    /* grid-area: section; */
    border-radius: 40px;
-   padding: 50px 30px;
+   padding: 10px 30px 50px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
@@ -10,13 +10,93 @@
    /* overflow: hidden; */
 }
 
+.header {
+   width: 100%;
+   display: flex;
+   justify-content: flex-start;
+   flex-direction: row-reverse;
+   align-items: center;
+   gap: 12px;
+}
+
+.header__wrapper-welcome {
+   /* background-color: #F5F7F9;
+   backdrop-filter: blur(5px); */
+   padding: 8px;
+   box-sizing: border-box;
+   display: flex;
+   align-items: center;
+   gap: 8px;
+   border-radius: 24px;
+}
+
 .header__title {
    margin: 0;
-   font-size: 26px;
+   font-size: 14px;
    color: #262626;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 800;
    line-height: 1.2;
+
+}
+
+.header__title-span {
+   margin: 0;
+   font-size: 10px;
+   color: #262626;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 400;
+
+}
+
+.header__avatar {
+   width: 32px;
+   height: 32px;
+   background-color: #262626;
+   border-radius: 50%;
+   background: url('../images/avatar.jpg') center;
+   background-size: contain;
+}
+
+.header__date {
+   width: 52px;
+   height: 32px;
+   padding: 10px 4px;
+   box-sizing: border-box;
+   background-color: #ffffff;
+   border-radius: 24px;
+   color: #262626;
+   margin: 0 auto;
+   font-size: 10px;
+   font-family: 'Open Sans', Arial, sans-serif;
+   font-weight: 400;
+   line-height: 1.2;
+   text-align: center;
+}
+
+.header__toggle-theme {
+   width: 64px;
+   height: 32px;
+   background-color: #e2e2e2;
+   color: #262626;
+   border-radius: 24px;
+   padding: 6px;
+   box-sizing: border-box;
+   font-size: 10px;
+   text-align: center;
+}
+
+.header__today {
+   width: 64px;
+   height: 32px;
+   background-color: #e2e2e2;
+   color: #262626;
+   border-radius: 24px;
+   padding: 6px;
+   box-sizing: border-box;
+   margin-right: auto;
+   font-size: 10px;
+   text-align: center;
 }
 
 .wrapper {
