--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,6 +1,6 @@
 .page {
    margin: 0;
-overflow: hidden;
+   overflow: hidden;
    width: 100vw;
    height: 100vh;
    font-family: 'Open Sans', Arial, sans-serif;
@@ -16,7 +16,6 @@ overflow: hidden;
    background-size: cover;
    width: 100%;
    height: 100%;
-   border: 2px solid #fff;
    border-radius: 8px;
    margin: 0 auto;
    grid-area: main;
@@ -25,12 +24,11 @@ overflow: hidden;
 
 .container {
    margin: 0;
-   padding: 12px 28px;
+   padding: 18px 70px 20px 50px;
    height: 100vh;
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    border-radius: 12px;
-   justify-items: center;
    box-sizing: border-box;
    width: 100%;
 }
