--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,7 @@
 @import url('../vendor/fonts.css');
 @import url('../blocks/page.css');
 @import url('../blocks/aside.css');
+@import url('../blocks/header.css');
 @import url('../blocks/screen-area.css');
 @import url('../blocks/popup-edit.css');
 @import url('../blocks/section-time.css');
