--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -20,17 +20,24 @@
    margin: 0 auto;
    grid-area: main;
    box-sizing: border-box;
+   position: relative;
 }
 
 .container {
    margin: 0;
    padding: 18px 70px 20px 50px;
-   height: 100vh;
+   /* height: 100%; */
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    border-radius: 12px;
    box-sizing: border-box;
    width: 100%;
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   overflow-y: scroll;
 }
 
 @media (max-width: 1050px) {
