--- a/src/blocks/section-weather.css
+++ b/src/blocks/section-weather.css
@@ -19,15 +19,39 @@
    color: #ffffff;
    width: 100%;
    box-sizing: border-box;
+   position: relative;
 }
 
 .weather__subtitle {
-   margin: 0;
+   width: 20px;
+   height: 20px;
+   background: url('../images/location.png') no-repeat center;
+   background-size: contain;
+   margin-bottom: 4px;
+}
+
+.weather__edit-btn {
+   position: absolute;
+   top: 20px;
+   right: 18px;
    font-size: 10px;
    line-height: 1.3;
    color: rgba(255, 255, 255, .5);
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 400;
+   text-align: end;
+   margin: 0;
+   display: flex;
+   justify-content: flex-end;
+   gap: 8px;
+   cursor: pointer;
+}
+
+.weather__edit-btn-img {
+   width: 10px;
+   height: 10px;
+   background: url('../images/pencil.png') no-repeat center;
+   background-size: contain;
 }
 
 .weather__city {
@@ -37,10 +61,26 @@
    color: #ffffff;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 500;
+   position: relative;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   text-wrap: nowrap;
 }
 
+/* .weather__city::after {
+   content: '';
+   display: block;
+   width: 14px;
+   height: 14px;
+   background: url('../images/pencil.png') no-repeat center;
+   background-size: contain;
+   position: absolute;
+   right: 0;
+   top: 0;
+} */
+
 .weather__temperature {
-   margin: 20px auto 0;
+   margin: 10px auto 0;
    font-size: 96px;
    line-height: 1.3;
    color: #ffffff;
