--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,6 +3,7 @@
 @import url('../blocks/aside.css');
 @import url('../blocks/header.css');
 @import url('../blocks/screen-area.css');
+@import url('../blocks/popup.css');
 @import url('../blocks/popup-edit.css');
 @import url('../blocks/section-time.css');
 @import url('../blocks/section-weather.css');
