--- a/src/blocks/section-weather.css
+++ b/src/blocks/section-weather.css
@@ -27,13 +27,13 @@
    height: 20px;
    background: url('../images/location.png') no-repeat center;
    background-size: contain;
-   margin-bottom: 4px;
+   margin-bottom: 8px;
 }
 
 .weather__edit-btn {
    position: absolute;
-   top: 20px;
-   right: 18px;
+   top: 24px;
+   right: 20px;
    font-size: 10px;
    line-height: 1.3;
    color: rgba(255, 255, 255, .5);
@@ -54,6 +54,12 @@
    background-size: contain;
 }
 
+.weather__region {
+   margin: 0;
+   font-size: 12px;
+   color: rgba(255, 255, 255, .5);
+}
+
 .weather__city {
    margin: 0;
    font-size: 32px;
@@ -65,6 +71,7 @@
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
+   /* text-align: center; */
 }
 
 /* .weather__city::after {
@@ -80,9 +87,9 @@
 } */
 
 .weather__temperature {
-   margin: 10px auto 0;
+   margin: 0 auto;
    font-size: 96px;
-   line-height: 1.3;
+   line-height: 1.2;
    color: #ffffff;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 800;
@@ -96,6 +103,7 @@
    color: rgba(255, 255, 255, .5);
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 400;
+   text-align: center;
 }
 
 .weather__info-container {
