--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -46,8 +46,8 @@
    background-size: contain;
 }
 
-.header__date {
-   width: 52px;
+/* .header__date {
+   width: 76px;
    height: 32px;
    padding: 10px 4px;
    box-sizing: border-box;
@@ -57,10 +57,10 @@
    margin: 0 auto;
    font-size: 10px;
    font-family: 'Open Sans', Arial, sans-serif;
-   font-weight: 400;
+   font-weight: 500;
    line-height: 1.2;
    text-align: center;
-}
+} */
 
 .header__toggle-theme {
    width: 64px;
@@ -75,14 +75,16 @@
 }
 
 .header__today {
-   width: 64px;
+   width: 110px;
    height: 32px;
    background-color: #e2e2e2;
    color: #262626;
+   font-weight: 500;
    border-radius: 24px;
-   padding: 6px;
+   padding: 8px;
    box-sizing: border-box;
    margin-right: auto;
-   font-size: 10px;
+   font-size: 12px;
    text-align: center;
+   line-height: 1.3;
 }
